WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
191938
[css-grid] absolute positioned child is sized wrongly when using auto-fit, generating spurious collapsed tracks
https://bugs.webkit.org/show_bug.cgi?id=191938
Summary
[css-grid] absolute positioned child is sized wrongly when using auto-fit, ge...
Javier Fernandez
Reported
2018-11-24 01:40:58 PST
Created
attachment 355558
[details]
Test case to reproduce the issue What steps will reproduce the problem? (1) load the attached testcase (2) (3) What is the expected result? In the top two grids, all <span>s should be 30px wide (the width of one column). In the last grid, all <span>s should be 65px wide (the width of two columns with a 5px grid gap in-between). What happens instead? All abs.pos. boxes (pink color) are 5px too short. This how Firefox renders this case, which seems correct per the CSS Grid spec.
Attachments
Test case to reproduce the issue
(1.15 KB, text/html)
2018-11-24 01:40 PST
,
Javier Fernandez
no flags
Details
Patch
(8.59 KB, patch)
2018-11-24 01:52 PST
,
Javier Fernandez
no flags
Details
Formatted Diff
Diff
Archive of layout-test-results from ews122 for ios-simulator-wk2
(2.62 MB, application/zip)
2018-11-24 04:37 PST
,
EWS Watchlist
no flags
Details
Patch
(8.62 KB, patch)
2018-11-26 02:20 PST
,
Javier Fernandez
no flags
Details
Formatted Diff
Diff
Show Obsolete
(2)
View All
Add attachment
proposed patch, testcase, etc.
Javier Fernandez
Comment 1
2018-11-24 01:52:10 PST
Created
attachment 355560
[details]
Patch
EWS Watchlist
Comment 2
2018-11-24 04:37:05 PST
Comment on
attachment 355560
[details]
Patch
Attachment 355560
[details]
did not pass ios-sim-ews (ios-simulator-wk2): Output:
https://webkit-queues.webkit.org/results/10127719
New failing tests: imported/w3c/web-platform-tests/webrtc/simplecall-no-ssrcs.https.html media/no-fullscreen-when-hidden.html
EWS Watchlist
Comment 3
2018-11-24 04:37:06 PST
Created
attachment 355562
[details]
Archive of layout-test-results from ews122 for ios-simulator-wk2 The attached test failures were seen while running run-webkit-tests on the ios-sim-ews. Bot: ews122 Port: ios-simulator-wk2 Platform: Mac OS X 10.13.6
Manuel Rego Casasnovas
Comment 4
2018-11-26 01:55:00 PST
Comment on
attachment 355560
[details]
Patch View in context:
https://bugs.webkit.org/attachment.cgi?id=355560&action=review
Thanks for fixing this. If this was fixed before in Blink could you link the bug from "See also" field?
> Source/WebCore/ChangeLog:3 > + [css-grid] grid abs.pos. child is sized wrongly when using auto-fit and it generates some collapsed tracks
Nit: This title might be reworded :-)
> Source/WebCore/rendering/RenderGrid.cpp:395 > + // We shouldn't count the gap if the the span starts and ends in a collapsed but there isn't non-empty tracks afterwards (it's at the end of the grid).
Nit: s/collapsed/collapsed track/
Javier Fernandez
Comment 5
2018-11-26 02:20:11 PST
Created
attachment 355628
[details]
Patch
WebKit Commit Bot
Comment 6
2018-11-26 04:09:13 PST
Comment on
attachment 355628
[details]
Patch Clearing flags on attachment: 355628 Committed
r238491
: <
https://trac.webkit.org/changeset/238491
>
WebKit Commit Bot
Comment 7
2018-11-26 04:09:15 PST
All reviewed patches have been landed. Closing bug.
Radar WebKit Bug Importer
Comment 8
2018-11-26 04:10:44 PST
<
rdar://problem/46241477
>
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug